--- a/contact.html
+++ b/contact.html
@@ -76,6 +76,7 @@
                     <input type="text"placeholder="Enter Your Name" required>
                     <input type="email" placeholder="Enter Your Email" name="" id="">
                     <input type="password" placeholder="Enter Your Password" name="" id="">
+                    <button type="submit" class="hero_btn red_btn">Submit</button>
                 </form>
             </div>
         </div>
